# AudioVisualizerV1

./: Cargo.toml  README.md
src/: main.rs  ring_buffer.rs  system_audio.rs
src/audio_graphics/: .gitignore  mod.rs  spectrum.rs  waveform.rs
src/audio_processing/fft/: mod.rs  window.rs
src/graphics/: mod.rs  vertex.rs
src/graphics/shaders/: spectrum.comp  spectrum.fs  spectrum.vs
src/shaders/: spectrum.comp  waveform.comp  waveform.fs  waveform.vs
