[package]
name = "audio_visualizer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.0.1"
plotters = "0.3.1"
lazy_static = "1.4.0"
cpal = "0.13"
parking_lot = "0.12.1"
rand = "0.8.5"
glutin = "0.30.10"
glium = "0.32.1"