[package]
name = "audio_visualizer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.0.1"
plotters = "0.3.5"
lazy_static = "1.4.0"
cpal = "0.13"
egui = "0.22.0"
eframe = "0.22.0"

fft_util = { path = "../fft_util" }